--- a/kr-c-notes/2. Types, Operators and Expressions.md
+++ b/kr-c-notes/2. Types, Operators and Expressions.md
@@ -27,7 +27,31 @@ Expressions connected by logical operators, `&&` or `||` are evaluated left to r
 
 ![[Pasted image 20240718182524.png#center | 600]]
 
-So, `i < lim - 1` is evaluated as `i < (lim - 1)`.
+![[Pasted image 20240726194012.png]]
+
+**Remember**, postfix unary operators -> prefix unary operators -> binary operators
+
+**Associativity**:
+
+**Operator associativity** is used when two operators of the same precedence appear in an expression. Associativity can be either from **Left to Right or Right to Left.**
+
+- Let us consider an example: `1 == 2 != 3`
+
+Here, operators `==` and `!=` have the same precedence. And, their associativity is from left to right. Hence, `1 == 2` is executed first.
+
+So, The expression above is equivalent to: `(1 == 2) != 3`
+
+Ex:
+```
+100 / 5 % 2
+// left to right
+= (100 / 5) % 2
+= 20 % 2
+= 0
+```
+---
+
+In the given example, `i < lim - 1` is evaluated as `i < (lim - 1)`.
 
 - The precedence of `&&` is higher than that of `||`, and both are lower than relational and equality operators. Ex:
 
