better ascii table

--- a/kr-c-notes/2. Types, Operators and Expressions.md
+++ b/kr-c-notes/2. Types, Operators and Expressions.md
@@ -65,6 +65,8 @@ Logical expressions and relational expressions evaluate to an integer output, wi
 
 # Character Constants
 
+![[Pasted image 20240803212935.png]]
+
 ![[ASCII-Table.png]]
 
 Note:
