--- a/kr-c-notes/5. Pointers and Arrays.md
+++ b/kr-c-notes/5. Pointers and Arrays.md
@@ -25,3 +25,8 @@ echo hello, world
 ```
 
 ![[Pasted image 20240801122636.png]]
+
+
+# Pointers
+
+**Any pointer can be cast to `void *` and back again without loss of information.**
