--- a/kr-c-notes/2. Types, Operators and Expressions.md
+++ b/kr-c-notes/2. Types, Operators and Expressions.md
@@ -65,7 +65,7 @@ Logical expressions and relational expressions evaluate to an integer output, wi
 
 # Character Constants
 
-![[Pasted image 20240803212935.png]]
+![[Pasted image 20240803212935.png#center]]
 
 ![[ASCII-Table.png]]
 
