--- a/kr-c-notes/8. The Unix System Interface.md
+++ b/kr-c-notes/8. The Unix System Interface.md
@@ -8,6 +8,9 @@ Whenever is to be written to system checks if the program is allowed to (whether
 - Whenever input or output is to be done on the file, the file descriptor is used instead of the name to identify the file.
 - (A file descriptor is analogous to the file pointer used by the standard library, or to the file handle of MS-DOS.)
 - All information about an open file is maintained by the system; the user program refers to the file only by the file descriptor.
+
+Standard library uses **file pointers** (`FILE*`)
+UNIX system calls like `read` and `write` use **file descriptors** (`unsigned int` )
 ## Standard Buffers
 
 File descriptors **0**, **1**, and **2**, called the standard input, the standard output, and the standard error.
@@ -92,3 +95,24 @@ sets the current position in the file whose descriptor is `fd` to `offset`, whic
 	2 - end of the file
 
 With lseek, it is possible to treat files more or less like arrays, at the *price of slower access*.
+
+# Storage Allocators
+
+Since other activities in the program may also request space without calling this allocator, the space that malloc manages may not be contiguous. Thus its free storage is kept as a list of free blocks.
+
+Each block contains a size, a pointer to the next block, and the space itself. The blocks are kept in order of increasing storage address, and the last block (highest address) points to the first.
+
+![[Pasted image 20240825135715.png]]
+
+The Align field is never used; it just forces each header to be aligned on a worst-case
+boundary.
+
+In malloc, the requested size in characters is rounded up to the proper number of header-sized units; the block that will be allocated contains one more unit, for the header itself, and this is the value recorded in the size field of the header.
+- The pointer returned by malloc points at the free space, not at the header itself.
+
+![[Pasted image 20240825145215.png]]
+
+The size field is necessary because the blocks controlled by malloc need not be contiguous - it is not possible to compute sizes by pointer arithmetic.
+
+
+
