--- a/kr-c-notes/1. Introduction.md
+++ b/kr-c-notes/1. Introduction.md
@@ -12,17 +12,17 @@ Qualifiers:
 - Whether plain chars are signed or unsigned is machine-dependent, *but printable characters are always positive*.
 # Range of Datatypes
 
-![[Pasted image 20240706162034.png]]
+![[./assets/Pasted image 20240706162034.png]]
 
 # Format Specifiers
 
-![[Pasted image 20240706144453.png]]
+![[./assets/Pasted image 20240706144453.png]]
 
 In C++:
 	sizeof(short) <= sizeof(int) <= sizeof(long)
 # Formatting
 
-![[Pasted image 20240704232656.png#center | 500]]
+![[./assets/Pasted image 20240704232656.png#center | 500]]
 
 Among others, printf also recognizes %o for octal, %x for hexadecimal, %c for character, %s
 for character string and `%%` for itself.
