--- a/kr-c-notes/5. Pointers and Arrays.md
+++ b/kr-c-notes/5. Pointers and Arrays.md
@@ -1,8 +1,8 @@
 
-![[Pasted image 20240726195847.png#center | 300]]
+![[./assets/Pasted image 20240726195847.png#center | 300]]
 
 
-![[Pasted image 20240727141105.png]]
+![[./assets/Pasted image 20240727141105.png]]
 
 As formal parameters in a function definition,
 ```c
@@ -14,9 +14,9 @@ char* s;
 ```
 are equivalent; we prefer the latter because it says more *explicitly that the variable is a pointer*.
 
-![[Pasted image 20240801112733.png]]
+![[./assets/Pasted image 20240801112733.png]]
 
-![[Pasted image 20240801112754.png]]
+![[./assets/Pasted image 20240801112754.png]]
 
 # CLI Arguments
 
@@ -24,7 +24,7 @@ are equivalent; we prefer the latter because it says more *explicitly that the v
 echo hello, world
 ```
 
-![[Pasted image 20240801122636.png]]
+![[./assets/Pasted image 20240801122636.png]]
 
 
 # Pointers
