--- a/kr-c-notes/7. Input and Output.md
+++ b/kr-c-notes/7. Input and Output.md
@@ -42,7 +42,7 @@ If the character after the `%` is not a conversion specification, the behavior i
 
 **Basic printf conversions (after %)**:
 
-![[Pasted image 20240817092422.png]]
+![[./assets/Pasted image 20240817092422.png]]
 
 `*` - width or precision
 
@@ -93,7 +93,7 @@ space characters are blank, tab, newline, carriage return, vertical tab, and for
 
 **Basic scanf Conversions (after %)**:
 
-![[Pasted image 20240817123207.png]]
+![[./assets/Pasted image 20240817123207.png]]
 
 The conversion characters `d`, `i`, `o`, `u`, and `x` may be preceded by **`h`** to indicate that a pointer to **short** rather than int appears in the argument list, or by **`l`** (letter ell) to indicate that a pointer to **long** appears in the argument list.
 
@@ -120,12 +120,12 @@ This error is not generally detected at compile time.
 
 In the following, `s` and `t` are `char *`'s, and `c` and `n` are `int`s.
 
-![[Pasted image 20240819132950.png#center]]
+![[./assets/Pasted image 20240819132950.png#center]]
 
 ## Character Class Testing and Conversion (ctype.h)
 
 Several functions from` <ctype.h>` perform character tests and conversions. In the following,`c` is an `int` that can have a value as an `unsigned char` or `EOF`. The function returns `int`:
 
-![[Pasted image 20240819133110.png#center]]
+![[./assets/Pasted image 20240819133110.png#center]]
 
 
