--- a/kr-c-notes/8. The Unix System Interface.md
+++ b/kr-c-notes/8. The Unix System Interface.md
@@ -102,7 +102,7 @@ Since other activities in the program may also request space without calling thi
 
 Each block contains a size, a pointer to the next block, and the space itself. The blocks are kept in order of increasing storage address, and the last block (highest address) points to the first.
 
-![[Pasted image 20240825135715.png]]
+![[./assets/Pasted image 20240825135715.png]]
 
 The Align field is never used; it just forces each header to be aligned on a worst-case
 boundary.
@@ -110,7 +110,7 @@ boundary.
 In malloc, the requested size in characters is rounded up to the proper number of header-sized units; the block that will be allocated contains one more unit, for the header itself, and this is the value recorded in the size field of the header.
 - The pointer returned by malloc points at the free space, not at the header itself.
 
-![[Pasted image 20240825145215.png]]
+![[./assets/Pasted image 20240825145215.png]]
 
 The size field is necessary because the blocks controlled by malloc need not be contiguous - it is not possible to compute sizes by pointer arithmetic.
 
