--- a/kr-c-notes/4. Functions and Program Structure.md
+++ b/kr-c-notes/4. Functions and Program Structure.md
@@ -117,7 +117,7 @@ There must be **only one definition of an external variable** among all the file
 
 Ex: Setup **without header files**:
 
-![[Pasted image 20240724161135.png#center | 300]]
+![[./assets/Pasted image 20240724161135.png#center | 300]]
 
 # Header Files
 
@@ -127,7 +127,7 @@ We have used a single header file in the calculator example, but we could have u
 
 # Storage Classes
 
-![[Storage-Classes-In-C.png]]
+![[./assets/Storage-Classes-In-C.png]]
 
 Note: 
  - `static` behaves differently for (automatic) static variables and (global) static variables.
