change wikilinks to md links

--- a/kr-c-notes/1. Introduction.md
+++ b/kr-c-notes/1. Introduction.md
@@ -12,17 +12,17 @@ Qualifiers:
 - Whether plain chars are signed or unsigned is machine-dependent, *but printable characters are always positive*.
 # Range of Datatypes
 
-![[./assets/Pasted image 20240706162034.png]]
+![./assets/Pasted image 20240706162034.png](./assets/Pasted%20image%2020240706162034.png)
 
 # Format Specifiers
 
-![[./assets/Pasted image 20240706144453.png]]
+![./assets/Pasted image 20240706144453.png](./assets/Pasted%20image%2020240706144453.png)
 
 In C++:
 	sizeof(short) <= sizeof(int) <= sizeof(long)
 # Formatting
 
-![[./assets/Pasted image 20240704232656.png#center | 500]]
+![./assets/Pasted image 20240704232656.png#center | 500](./assets/Pasted%20image%2020240704232656.png#center%20%7C%20500.md)
 
 Among others, printf also recognizes %o for octal, %x for hexadecimal, %c for character, %s
 for character string and `%%` for itself.
