--- a/kr-c-notes/5. Pointers and Arrays.md
+++ b/kr-c-notes/5. Pointers and Arrays.md
@@ -1,8 +1,8 @@
 
-![[./assets/Pasted image 20240726195847.png#center | 300]]
+![./assets/Pasted image 20240726195847.png#center | 300](./assets/Pasted%20image%2020240726195847.png#center%20%7C%20300.md)
 
 
-![[./assets/Pasted image 20240727141105.png]]
+![./assets/Pasted image 20240727141105.png](./assets/Pasted%20image%2020240727141105.png)
 
 As formal parameters in a function definition,
 ```c
@@ -14,9 +14,9 @@ char* s;
 ```
 are equivalent; we prefer the latter because it says more *explicitly that the variable is a pointer*.
 
-![[./assets/Pasted image 20240801112733.png]]
+![./assets/Pasted image 20240801112733.png](./assets/Pasted%20image%2020240801112733.png)
 
-![[./assets/Pasted image 20240801112754.png]]
+![./assets/Pasted image 20240801112754.png](./assets/Pasted%20image%2020240801112754.png)
 
 # CLI Arguments
 
@@ -24,7 +24,7 @@ are equivalent; we prefer the latter because it says more *explicitly that the v
 echo hello, world
 ```
 
-![[./assets/Pasted image 20240801122636.png]]
+![./assets/Pasted image 20240801122636.png](./assets/Pasted%20image%2020240801122636.png)
 
 
 # Pointers
