--- a/kr-c-notes/2. Types, Operators and Expressions.md
+++ b/kr-c-notes/2. Types, Operators and Expressions.md
@@ -1,7 +1,7 @@
 
 Set of escape sequences:
 
-![[./assets/Pasted image 20240718165057.png#center  | 400]]
+![./assets/Pasted image 20240718165057.png#center  | 400](./assets/Pasted%20image%2020240718165057.png#center%20%20%7C%20400.md)
 
 - The character constant '\0' represents the character with value zero, the null character. `'\0'` is often written instead of 0 to emphasize the character nature of some expression, *but the numeric value is just 0*.
 
@@ -25,9 +25,9 @@ int strlen(const char[]);
 
 Expressions connected by logical operators, `&&` or `||` are evaluated left to right, and evaluation stops as soon as the truth or falsehood of the result is known. (**short circuiting**)
 
-![[./assets/Pasted image 20240718182524.png#center | 600]]
+![./assets/Pasted image 20240718182524.png#center | 600](./assets/Pasted%20image%2020240718182524.png#center%20%7C%20600.md)
 
-![[./assets/Pasted image 20240726194012.png]]
+![./assets/Pasted image 20240726194012.png](./assets/Pasted%20image%2020240726194012.png)
 
 **Remember**, postfix unary operators -> prefix unary operators -> binary operators
 
@@ -65,9 +65,9 @@ Logical expressions and relational expressions evaluate to an integer output, wi
 
 # Character Constants
 
-![[./assets/Pasted image 20240803212935.png#center]]
+![./assets/Pasted image 20240803212935.png#center](./assets/Pasted%20image%2020240803212935.png#center.md)
 
-![[./assets/ASCII-Table.png]]
+![./assets/ASCII-Table.png](./assets/ASCII-Table.png)
 
 Note:
  - `0`, `\0'`, `NULL` all refer to the null-terminator with numeric value 0.
