--- a/kr-c-notes/2. Types, Operators and Expressions.md
+++ b/kr-c-notes/2. Types, Operators and Expressions.md
@@ -70,7 +70,7 @@ Logical expressions and relational expressions evaluate to an integer output, wi
 ![./assets/ASCII-Table.png](./assets/ASCII-Table.png)
 
 Note:
- - `0`, `\0'`, `NULL` all refer to the null-terminator with numeric value 0.
+ - `0`, `\0`, `NULL` all refer to the null-terminator with numeric value 0.
 
 **Remember**:
 
